Tue Aug 24 11:30:48 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
        * connectors/dds4ccm/impl/DataWriter.cpp:
        * connectors/dds4ccm/impl/DataWriter_T.cpp:
        * connectors/dds4ccm/impl/DomainParticipant_T.cpp:
        * connectors/dds4ccm/impl/Publisher_T.cpp:
        * connectors/dds4ccm/impl/Subscriber_T.cpp:
        * connectors/dds4ccm/impl/Topic_T.cpp:
          Delete the DDS listeners when they are set 

Tue Aug 24 09:28:55 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/LocalityManager/Scheduler/Plugin_Manager.cpp:
        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
        * connectors/dds4ccm/impl/DomainParticipant_T.cpp:
          Fixed memory leaks

Mon Aug 23 14:11:46 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ConditionManager_T.cpp:
        * connectors/dds4ccm/impl/Reader_T.cpp:
          Layout changes to comments

        * connectors/dds4ccm/performance-tests/Throughput/descriptors/Plan_pub.cdp:
          Send 5000 samples instead of 10000 so that we don't get all kind
          of test failures on slower systems

Sat Aug 21 16:47:05 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/LocalityManager/Configuration/CPU_Affinity.cpp:
        * DAnCE/tests/LocalityManager/CPUAffinity/CPUAffinity_exec.cpp:

          Compile errors.

Sat Aug 21 16:40:35 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/tests/Parsing/ArtGallery3Nodes.cdd:

          File missing from a previous commit.

Sat Aug 21 16:39:51 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/DAnCE/DAnCE_DeploymentInterceptors_Base_Impl.cpp:

          Warnings.

Sat Aug 21 16:32:46 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/tools/System_Health/SHS_DataModel.idl:

          Corrected spelling of 'vanderbit'.
