@@ -1,3 +1,9 @@
+Tue Aug 24 15:10:36 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/impl/DDS_Event_Connector_T.cpp:
+        * connectors/dds4ccm/impl/DDS_State_Connector_T.cpp:
+          Fixed memory leak
+
 Tue Aug 24 11:30:48 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
@@ -7,7 +13,7 @@ Tue Aug 24 11:30:48 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
         * connectors/dds4ccm/impl/Publisher_T.cpp:
         * connectors/dds4ccm/impl/Subscriber_T.cpp:
         * connectors/dds4ccm/impl/Topic_T.cpp:
-          Delete the DDS listeners when they are set 
+          Delete the DDS listeners when they are set
 
 Tue Aug 24 09:28:55 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
